cluster_server_installer/resources/deployments/ciy/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: redis
 namespace: cloud-iy
spec:
 replicas: 1
 selector:
    matchLabels:
      app: redis
 template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        command: ["sh", "-c", "redis-server --requirepass ${PASSWORD}"]
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
 name: redis-service
 namespace: cloud-iy
spec:
 selector:
    app: redis
 ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
 type: ClusterIP
